fix: router pattern and tests
